# reversi

./: AiPlayer.cpp  AiPlayer.h  Aiplayer.cpp  Aiplayer.h  Board.cpp  Board.h  CMakeLists.txt  Diagram1.dia  Disc.cpp  Disc.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Menu.h  Player.cpp  Player.h  ReversiGame.cpp  ReversiGame.h  StackOfDiscs.cpp  StackOfDiscs.h  main.cpp
ReversiTest/: CMakeLists.txt
ReversiTest/Tests/: AiPlayerLogicTest.cpp  HasMoveTest.cpp  LogicEat.cpp  MoveOptionTest.cpp  Test.cpp  mainTesting.cpp
src/: AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Client.cpp  Client.h  ClientPlayer.cpp  ClientPlayer.h  Disc.cpp  Disc.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Menu.h  Player.cpp  Player.h  ReversiGame.cpp  ReversiGame.h  StackOfDiscs.cpp  StackOfDiscs.h  Symbol.h  main.cpp  setting.txt
src/ReversiTest/: CMakeLists.txt
src/ReversiTest/Tests/: AiPlayerLogicTest.cpp  HasMoveTest.cpp  LogicEat.cpp  MoveOptionTest.cpp
src/Server/: CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  Command.h  CommandManager.cpp  CommandManager.h  CommandsManager.cpp  CommandsManager.h  GameStruct.h  GamesListManager.cpp  GamesListManager.h  HandelClient.cpp  HandelClient.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadList.cpp  ThreadList.h  ThreadPool.cpp  ThreadPool.h  closeServerCommand.cpp  closeServerCommand.h  main.cpp  makefile
src/client/: AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  CMakeLists.txt  ClientPlayer.cpp  ClientPlayer.h  CloseCommand.cpp  CloseCommand.h  Command.h  CommandMannager.cpp  CommandMannager.h  Disc.cpp  Disc.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  JoinCommand.cpp  JoinCommand.h  ListOfGamesCommand.cpp  ListOfGamesCommand.h  Menu.cpp  Menu.h  Player.cpp  ReversiGame.cpp  ReversiGame.h  ScreenView.cpp  ScreenView.h  ServerCom.cpp  ServerCom.h  StackOfDiscs.cpp  StackOfDiscs.h  StartCommand.cpp  StartCommand.h  Symbol.h  main.cpp
